Used font-awesome for contact icons

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/palette.css" />
+        <script src="https://use.fontawesome.com/eb213707b3.js"></script>
     </head>
     <body>
         <header class="petrol">
@@ -152,16 +153,16 @@
             </h2>
             <ul class="contact-links">
                 <li>
-                    (t) +31653593790
+                    <a href="tel:+31653593790"><i class="fa fa-phone" style="color:#25d366" title="Phone / Signal"></i> +31653593790</a>
                 </li>
                 <li>
-                    <a href="mailto:me@lucasvanlierop.nl">me@lucasvanlierop.nl</a>
+                    <a href="mailto:me@lucasvanlierop.nl"><i class="fa fa-mail-reply" title="Mail"></i> me@lucasvanlierop.nl</a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/lucasvanlierop"><img src="img/twitter-logo.svg" alt="Twitter logo" /></a>
+                    <a href="https://twitter.com/lucasvanlierop"><i class="fa fa-twitter" style="color:#00aced" title="Twitter"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.meetup.com/DomCode/members/154691052/"><img src="img/meetup-logo.svg" /></a>
+                    <a href="https://www.meetup.com/DomCode/members/154691052/"><i class="fa fa-meetup" style="color: rgb(237, 28,64)" title="Meetup"></i></a>
                 </li>
             </ul>
         </section>
