Found better icon for mail

--- a/web/index.html
+++ b/web/index.html
@@ -156,7 +156,7 @@
                     <a href="tel:+31653593790"><i class="fa fa-phone" style="color:#25d366" title="Phone / Signal"></i> +31653593790</a>
                 </li>
                 <li>
-                    <a href="mailto:me@lucasvanlierop.nl"><i class="fa fa-mail-reply" title="Mail"></i> me@lucasvanlierop.nl</a>
+                    <a href="mailto:me@lucasvanlierop.nl"><i class="fa fa-envelope-open" title="Mail"></i> me@lucasvanlierop.nl</a>
                 </li>
                 <li>
                     <a href="https://twitter.com/lucasvanlierop"><i class="fa fa-twitter" style="color:#00aced" title="Twitter"></i></a>
