--- a/web/index.html
+++ b/web/index.html
@@ -122,7 +122,372 @@
             <em>Keywords: PHP, Symfony, Javascript, TravisCI, Containers, Docker</em>
         </section>
 
-        <section class="public-appearances medium-petrol">
+        <section class="skills">
+            <!--fa-server, fa-database fa-plus-circle fa-wrench fa-asterisk fa-bolt fa-desktop fa-dashboard fa-gears fa-id-card fa-car-->
+            <ul class="block-list">
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-asterisk"></i>
+                        Programming languages
+                    </h3>
+                    <ul>
+                        <li>
+                            PHP
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            JavaScript
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Bash
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            I’m currently learning Scala and have also used Cobol and VB script
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-asterisk"></i>
+                        Frameworks
+                    </h3>
+                    <ul>
+                        <li>
+                            Symfony 2/3
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Zend Framework 1
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Backbone/Marionette
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-asterisk"></i>
+                        Concepts
+                    </h3>
+                    <ul>
+                        <li>
+                            Hexagonal architecture
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            TDD
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            DDD
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            CQS
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Studing CQRS & eventsourcing.
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-ship"></i>
+                        Deployment & Provisioning automation
+                    </h3>
+                    <ul>
+                        <li>
+                            Docker
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            DC/OS
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Ansible
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Vagrant
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-id-card"></i>
+                        Authentication
+                    </h3>
+                    <ul>
+                        <li>
+                            OAuth2
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            SAML
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-desktop"></i>
+                        Front-end
+                    </h3>
+                    <ul>
+                        <li>
+                            HTML
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            CSS
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            TODO: Gulp, Grunt, UnderscoreJS RequireJS
+                        </li>
+                    </ul>
+                </li>
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-check"></i>
+                        Quality Assurance
+                    </h3>
+                    <ul>
+                        <li>
+                            Travis-CI
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Bamboo
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Ant
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            PHPunit
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            PHPMD
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            PHPCS
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            PHPLint
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            JSHint
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Symfony Security Checker
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-database"></i>
+                        Databases, persistence
+                    </h3>
+                    <ul>
+                        <li>
+                            MySQL
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Redis
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-copy"></i>
+                        Version Control
+                    </h3>
+                    <ul>
+                        <li>
+                            Git
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            SVN
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-envelope-o"></i>
+                        Messaging & job queues
+                    </h3>
+                    <ul>
+                        <li>
+                            RabbitMq
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Beanstalk
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-certificate"></i>
+                        Certificates
+                    </h3>
+                    <ul>
+                        <li>
+                            ZCE
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-language"></i>
+                        Human Languages
+                    </h3>
+                    <ul>
+                        <li>
+                            Dutch
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            English
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Swedish
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-server"></i>
+                        System Administration
+                    </h3>
+                    <ul>
+                        <li>
+                            Linux
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+
+                            (I know my around in Linux, I’m containerizing my desktop apps for fun.)
+                        </li>
+                        <li>
+                            Windows
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            FreeBsd
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="block">
+                    <h3>
+                        <i class="fa fa-server"></i>
+                        None work related skills
+                    </h3>
+                    <ul>
+                        <li>
+                            Caring for my family
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+
+                            (I have a wife and two sons)
+                        </li>
+                        <li>
+                            General construction work
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            MIG welding
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Car maintenance
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                        <li>
+                            Electronics
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                            <i class="fa fa-plus-circle palette-rose"></i>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section class="public-appearances">
             <a id="public-appearances"></a>
             <h2>
                 Public appearances
